--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10",
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.3",
