--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "postcss": "^8",
