--- a/package.json
+++ b/package.json
@@ -52,15 +52,20 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/vue3-recommended",
       "eslint:recommended",
       "@vue/typescript/recommended",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
+      "prettier"
     ],
+    "parser": "vue-eslint-parser",
     "parserOptions": {
+      "parser": "@typescript-eslint/parser",
       "ecmaVersion": 2020
     },
-    "rules": {},
+    "rules": {
+      "prettier/prettier": ["error", { "endOfLine": "off" }]
+    },
     "overrides": [
       {
         "files": [
