Possível erro de fim de linha removido.

--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
       "ecmaVersion": 2020
     },
     "rules": {
-      "prettier/prettier": ["error", { "endOfLine": "off" }]
+      "prettier/prettier": ["error", { "endOfLine": "auto" }]
     },
     "overrides": [
       {
