--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
+    "express": "^4.18.2",
     "postcss": "^8",
     "tailwindcss": "^3.3.3",
     "vue": "^3.2.13",
@@ -64,7 +65,12 @@
       "ecmaVersion": 2020
     },
     "rules": {
-      "prettier/prettier": ["error", { "endOfLine": "auto" }]
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ]
     },
     "overrides": [
       {
