--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10",
-    "axios": "^1.5.1",
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
+    "json-server": "^0.17.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.3",
     "vue": "^3.2.13",
