--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "backend": "json-server --watch db/db.json"
+    "backend": "json-server --watch db/db.json",
+    "new-docker": "docker build -t hotel-sereno-api . && docker run -it -p 8080:8080 --rm --name hotel-sereno hotel-sereno-api",
+    "docker": "docker rmi hotel-sereno-api && docker build -t hotel-sereno-api . && docker run -it -p 8080:8080 --rm --name hotel-sereno hotel-sereno-api"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
